[project]
name = "digital-assistant-context"
version = "0.0.1"
authors = [
  { name="Aleksandr Belov", email="a.belov@asbelon.ru" },
]
description = "Управление контекстом как совокупности переменных исполнения сценария цифрового помощника."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/asbelon/digital-assistant-context/issues"